--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   shared_preferences: ^2.5.3
   image_picker:
   permission_handler:
+  calendar_date_picker2: ^1.1.5
+  syncfusion_flutter_datepicker: ^28.1.33
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
