--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   permission_handler:
   calendar_date_picker2: ^1.1.5
   syncfusion_flutter_datepicker: ^28.1.33
+  path_provider: ^2.1.3
+  open_filex: ^4.5.0
+  pdf: ^3.10.7
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
