--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,12 @@ dependencies:
   calendar_date_picker2: ^1.1.5
   syncfusion_flutter_datepicker: ^28.1.33
   path_provider: ^2.1.3
-  open_filex: ^4.5.0
+#  open_filex: ^4.5.0
   pdf: ^3.10.7
   bloc:
   flutter_bloc:
   shimmer: ^3.0.0
+  open_file:
 
 
 
